--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>React App</title>
+    <title>Movie Booking App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <div id="root-portal"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
